[package]
name = "clock"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.13.0-dev", features = ["canvas", "tokio", "debug"] }

[dependencies.time]
version = "0.3"
features = ["local-offset"]


[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "31d1d5fecbef50fa319cabd5d4194f1e4aaefa21" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "31d1d5fecbef50fa319cabd5d4194f1e4aaefa21" }
